空白ページを追加

--- a/manuscripts/09.md
+++ b/manuscripts/09.md
@@ -32,3 +32,5 @@
 『私は其のスコツトランドの墓地の古い水松の事を考へてゐますの。叔父さんは三千年とおつしやつたわねえ？』とクレエルが尋ねました。
 
 『三千年だよ。そしてもし私が外国の或る木の事をお前達に話さうものならまだもつと古い昔まで溯つて行かなくてはならないんだよ。』
+
+<hr class="page-wrap">
